--- a/src/html/change_password.html
+++ b/src/html/change_password.html
@@ -51,7 +51,7 @@
     </div>
 
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="main.html">
+        <a class="header-btn pn-back-btn pn-btn" href="javascript:void(0)" onclick="cm.transitionPrevUrl();">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
         <span data-i18n="ChangePass"></span>
@@ -88,7 +88,7 @@
     </main>
     <footer class="account-info-footer">
         <div class="edit-list footer-btn-area">
-            <button type="button" class="btn btn-secondary footer-btn" onclick="location.href='main.html'" data-i18n="Cancel"></button>
+            <button type="button" class="btn btn-secondary footer-btn" onclick="cm.transitionPrevUrl();" data-i18n="Cancel"></button>
             <button type="button" class="btn btn-primary footer-btn font-weight-bold" onclick="chg_pass.changePassword();" data-i18n="Update"></button>
         </div>
     </footer>
