--- a/src/html/login.html
+++ b/src/html/login.html
@@ -4,41 +4,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Personium Cell</title>
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
-  <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <script src="https://demo.personium.io/app-cc-home/__/html/js/load.i18n.js"></script>
-  <script src="https://demo.personium.io/app-cc-home/__/html/js/utils.js"></script>
-  <script src="https://demo.personium.io/app-cc-home/__/html/js/login.js"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
-  <!--     Fonts and icons     -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
-  <script type="text/javascript">
-    function init() {
-        lg.initTarget();
-    }
-  </script>
 </head>
 <body>
-  <div class="mySpinner">
-    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="myHiddenDiv">
+  <div id="loginForm">
     <section class="login-section">
-      <h1 id="pdsLogo">Personium</h1>
+      <h1 id="pdsLogo" class="login-h1">Personium</h1>
       <div>
         <img id="imProfile" src="" class="image-circle-large"/>
       </div>
@@ -56,7 +26,7 @@
         <div>
           <button class="login_btn_g" id="gLogin">
             <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/HomeApplication/__/icons/parts_ico_google.png">
-            <span data-i18n="loginGoogleAccount">Sign in with your Google Account</span>
+            <span class="fontWhite" data-i18n="loginGoogleAccount">Sign in with your Google Account</span>
           </button>
         </div>
       </div>
