--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -49,7 +49,7 @@
 <body>
 
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="main.html">
+        <a class="header-btn pn-back-btn pn-btn" href="javascript:void(0)" onclick="cm.transitionPrevUrl();">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
         <span data-i18n="Profile"></span>
