--- a/src/index.html
+++ b/src/index.html
@@ -1,95 +1,77 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Personium Cell</title>
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
-  <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <script src="https://demo.personium.io/app-cc-home/__/html/js/load.i18n.js"></script>
-  <script src="https://demo.personium.io/app-cc-home/__/html/js/utils.js"></script>
-  <script src="https://demo.personium.io/app-cc-home/__/html/js/login.js"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-  <link href='https://demo.personium.io/app-cc-home/__/html/css/common.css' rel='stylesheet' type='text/css'>
-  <link href='https://demo.personium.io/app-cc-home/__/html/css/login.css' rel='stylesheet' type='text/css'>
-  <!--     Fonts and icons     -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
-  <script type="text/javascript">
-    function init() {
-        lg.initTarget();
-    }
-  </script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Personium Cell</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
+    <link href='https://demo.personium.io/app-cc-home/__/html/css/common.css' rel='stylesheet' type='text/css'>
+    <link href='https://demo.personium.io/app-cc-home/__/html/css/login.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/personium.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/homeapp.css">
+
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script type="text/javascript">
+        var initPage = true;
+    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
+    <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/load.i18n.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/utils.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/personium.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/login.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/common.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/main.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/settings.js"></script>
+    <script type="text/javascript">
+        FontAwesomeConfig = {
+            searchPseudoElements: true
+        };
+        function init() {
+            personium.init();
+        }
+    </script>
 </head>
 <body>
-  <div class="mySpinner">
-    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="myHiddenDiv">
-    <section class="login-section">
-      <h1 id="pdsLogo">Personium</h1>
-      <div>
-        <img id="imProfile" src="" class="image-circle-large"/>
-      </div>
-      <div id="tProfileDisplayName" class="sizeHeadLine">Guest</div>
-      <div class="login-form-controls">
-        <div>
-          <input id="iAccountName" name="homeAppLoginID" type="text" data-i18n="[placeholder]accountNamePlaceHolder" placeholder="Please enter the account name." value=""/>
-        </div>
-        <div>
-          <input id="iAccountPw" name="homeAppLoginPassword" type="password" data-i18n="[placeholder]accountPassPlaceHolder" placeholder="Please enter a password." value=""/>
-        </div>
-        <div>
-          <button class="login_btn round-btn" id="bLogin"><span data-i18n="Login">LOGIN</span></button>
-        </div>
-        <div>
-          <button class="login_btn_g" id="gLogin">
-            <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/HomeApplication/__/icons/parts_ico_google.png">
-            <span data-i18n="loginGoogleAccount">Sign in with your Google Account</span>
-          </button>
-        </div>
-      </div>
-      <div class="error_box">
-        <div id="error_area" class="error_area">
-          <div class="error_content">
-            <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
-            <span id="error_msg" class="error_msg" data-i18n="Error">Error</span>
-          </div>
-        </div>
-      </div>
-    </section>
-  </div>
-  <div id="modal-input-cell" class="modal fade" role="dialog" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header login-header">
-          <h4 class="modal-title" data-i18n="inputLoginCellTitle">Login cell input</h4>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <div id="dvCellUrl">Cell URL</div>
-              <input id="pCellUrl" type="text" class="fontBlack" />
-              <span id="errorCellUrl" style="color:red"></span>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary" id="b-input-cell-ok">OK</button>
-        </div>
-      </div>
+    <div class="mySpinner">
+        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+        <span class="sr-only">Loading...</span>
     </div>
-  </div>
+    <div class="myHiddenDiv">
+        <div id="loadContent" class="loadHiddenDiv">
+        </div>
+    </div>
+
+    <!-- modal -->
+    <div class="modal fade double-btn-modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog pn-modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body pn-modal-body" data-i18n="logoutConfirm">
+                </div>
+                <div class="modal-footer pn-modal-footer">
+                    <button type="button" class="btn" data-dismiss="modal" data-i18n="Cancel"></button>
+                    <button type="button" class="btn ok-btn" onclick="cm.logout();">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
