--- a/src/html/applicationmarket.html
+++ b/src/html/applicationmarket.html
@@ -4,50 +4,72 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/app-cc-home/__/html/css/settings.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/personium.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/homeapp.css">
+    <link href='https://demo.personium.io/app-cc-home/__/html/css/common.css' rel='stylesheet' type='text/css'>
     <link href='https://demo.personium.io/app-cc-home/__/html/css/applicationmarket.css' rel='stylesheet' type='text/css'>
     <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/bootstrap-switch/bootstrap-switch.min.css' rel='stylesheet' type='text/css'>
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
     <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/bootstrap-switch/bootstrap-switch.min.js"></script>
-
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script>
+        FontAwesomeConfig = {
+            searchPseudoElements: true
+        };
+    </script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/personium.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/html/js/settings.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/load.i18n.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/html/js/common_old.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/common.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/applicationmarket.js"></script>
     <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
     <title>Personium Cell</title>
 </head>
 <body>
-    <div class="mySpinner">
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-        <span class="sr-only">Loading...</span>
-    </div>
-    <div class="myHiddenDiv">
-        <div class="container-fluid display-table">
-            <div class="row display-parent-div" id="displayParentDiv">
-                <div class="col-md-12 col-sm-12 display-table-cell v-align">
-                    <div class="row header-menu">
-                    </div>
-                    <div class="row user-dashboard" id="dashboard">
-                    </div>
+    <header>
+        <a class="header-btn pn-back-btn pn-btn" href="javascript:void(0)" onclick="cm.moveBackahead();">
+            <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
+        </a>
+        <span data-i18n="AppMarket"></span>
+    </header>
+    <main>
+        <div class="bg-gray">
+            <div class="user-dashboard" id="dashboard">
+                <div id="loadContent" class="loadHiddenDiv">
+                </div>
+            </div>
+        </div>
+    </main>
+    <div id="modal-confirmation" class="modal fade" role="dialog" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header login-header">
+                    <h4 class="modal-title" id="modal-confirmation-title"></h4>
+                </div>
+                <div class="modal-body">
+                    <div id="dvTextConfirmation"></div>
+                </div>
+                <div class="modal-footer pn-modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" data-i18n="Cancel"></button>
+                    <button type="button" class="btn" id="b-ins-bar-ok" onclick="am.execBarInstall();" style="display:none">OK</button>
+                    <button type="button" class="btn" id="b-unins-box-ok" onclick="am.execUninstallBox();" style="display:none">OK</button>
                 </div>
             </div>
         </div>
