Corresponding phase 3 of the account screen  - Change screen transition to page loading  - Aggregate dynamic loading of scripts into common.js  - Correction of processing accompanying changes to dynamic loading of pages

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,13 @@
     <script src="https://demo.personium.io/app-cc-home/__/html/js/login.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/common.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/main.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/account.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/account_info.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/account_link_role_list.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/account_link_role.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/edit_account.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/select_accounttype.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/new_account.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/settings.js"></script>
     <script type="text/javascript">
         FontAwesomeConfig = {
