Corresponding phase 3 of the profile screen  - Change screen transition to page loading  - Aggregate dynamic loading of scripts into common.js  - Correction of processing accompanying changes to dynamic loading of pages

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -48,7 +48,7 @@
     <main>
         <!--user account infomation-->
         <div class="user-account">
-            <div class="my_icon user-icon user-icon-small">
+            <div class="main_my_icon user-icon user-icon-small">
             </div>
             <div class="account-info">
                 <div class="user-name"></div>
