--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/html/js/select_accounttype.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/new_account.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/settings.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/profile.js"></script>
     <script type="text/javascript">
         FontAwesomeConfig = {
             searchPseudoElements: true
