Corresponding phase 3 of the change_password screen  - Change screen transition to page loading  - Aggregate dynamic loading of scripts into common.js  - Correction of processing accompanying changes to dynamic loading of pages

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/html/js/new_account.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/settings.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/profile.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/change_password.js"></script>
     <script type="text/javascript">
         FontAwesomeConfig = {
             searchPseudoElements: true
@@ -77,6 +78,19 @@
                 <div class="modal-footer pn-modal-footer">
                     <button type="button" class="btn" data-dismiss="modal" data-i18n="Cancel"></button>
                     <button type="button" class="btn ok-btn" onclick="cm.logout();">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade single-btn-modal" tabindex="-1" role="dialog" data-backdrop="static" aria-hidden="true">
+        <div class="modal-dialog pn-modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body pn-modal-body" data-i18n="successChangePass">
+
+                </div>
+                <div class="modal-footer pn-modal-footer">
+                    <button type="button" class="btn ok-btn" data-dismiss="modal">OK</button>
                 </div>
             </div>
         </div>
