Corresponding phase 3 of the change_language screen  - Change screen transition to page loading  - Aggregate dynamic loading of scripts into common.js  - Correction of processing accompanying changes to dynamic loading of pages

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/html/js/settings.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/profile.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/change_password.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/change_language.js"></script>
     <script type="text/javascript">
         FontAwesomeConfig = {
             searchPseudoElements: true
