--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Personium Cell</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/bootstrap-switch/bootstrap-switch.min.css' rel='stylesheet' type='text/css'>
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
     <!--     Fonts and icons     -->
@@ -15,6 +16,7 @@
     <link href='https://demo.personium.io/app-cc-home/__/html/css/login.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/personium.css">
     <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/html/css/homeapp.css">
+    <link href='https://demo.personium.io/app-cc-home/__/html/css/application_mgr.css' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -34,6 +36,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+    <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/bootstrap-switch/bootstrap-switch.min.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/load.i18n.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/personium.js"></script>
@@ -51,6 +54,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/html/js/profile.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/change_password.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/html/js/change_language.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/html/js/app_manage.js"></script>
     <script type="text/javascript">
         FontAwesomeConfig = {
             searchPseudoElements: true
