--- a/src/html/main.html
+++ b/src/html/main.html
@@ -74,7 +74,7 @@
                 </div>
             </a>
 
-            <a href="javascript:void(0)" onclick="cm.transitionHomeApp('applicationmarket.html');">
+            <a href="javascript:void(0)" onclick="am.loadApplicationMarket();">
                 <div class="app-market">
                     <svg class="menu-ic" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                         <title>ic_app_market</title>
