Corresponding phase 3 of the message screen  - Change screen transition to page loading  - Aggregate dynamic loading of scripts into common.js  - Correction of processing accompanying changes to dynamic loading of pages

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -89,7 +89,7 @@
                 </div>
             </a>
 
-            <a href="javascript:void(0)" onclick="cm.transitionHomeApp('message.html');">
+            <a href="javascript:void(0)" onclick="message.loadMessage();">
                 <div class="message">
                     <svg class="menu-ic" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                         <title>ic_message</title>
