Corresponding phase 3 of the link screen  - Change screen transition to page loading  - Aggregate dynamic loading of scripts into common.js  - Correction of processing accompanying changes to dynamic loading of pages

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -61,7 +61,7 @@
 
         <!--menu-->
         <div class="menu">
-            <a href="javascript:void(0)" onclick="cm.transitionHomeApp('links.html');">
+            <a href="javascript:void(0)" onclick="create_msg.loadLinks();">
                 <div class="links">
                     <svg class="menu-ic" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                         <title>ic_links</title>
