Corresponding phase 3 of the link screen  - Fixed an issue that the application list on the main screen disappears when displaying the assignment role

--- a/src/html/arrow_from_role.html
+++ b/src/html/arrow_from_role.html
@@ -36,7 +36,7 @@
                 <div class="user-description" data-i18n="arrowedRolesFromThisPerson"></div>
             </div>
 
-            <div class="app-and-service">
+            <div class="app-and-service" id="fromAppendRoleList">
                 
             </div>
         </div>
