Change meaningless href = "#" to href = "javascript: void (0)"
close #195

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Twenty by HTML5 UP
 	html5up.net | @ajlkn
@@ -81,9 +81,9 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
+						<li><a href="javascript:void(0)" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="javascript:void(0)" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
+						<li><a href="javascript:void(0)" class="icon circle fa-github"><span class="label">Github</span></a></li>
 					</ul>
 
 				<ul class="copyright">
