--- a/src/html/application_management.html
+++ b/src/html/application_management.html
@@ -24,11 +24,11 @@
                     <div class="panel-body">
                         <ul class="list">
                             <li>
-                                <a href="#" class="list-group-item disabled" onclick="app_manage.openAppliDelPanel(); return false;" data-i18n="ApplicationDelete">
+                                <a href="javascript:void(0)" class="list-group-item disabled" onclick="app_manage.openAppliDelPanel(); return false;" data-i18n="ApplicationDelete">
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="list-group-item" onclick="app_manage.openBoxInstall(); return false;" data-i18n="BoxInstall">
+                                <a href="javascript:void(0)" class="list-group-item" onclick="app_manage.openBoxInstall(); return false;" data-i18n="BoxInstall">
                                 </a>
                             </li>
                         </ul>
