--- a/src/html/change_language.html
+++ b/src/html/change_language.html
@@ -25,14 +25,14 @@
                 </div>
                 <ul class="hover-action">
                     <li class="en pn-check-list check-position-l" style="pointer-events: auto;">
-                        <a href="#" onclick="chg_lang.updateLanguage('en');">
+                        <a href="javascript:void(0)" onclick="chg_lang.updateLanguage('en');">
                             <div class="pn-list">
                                 <div class="account-info text-hidden"><span class="user-name" data-i18n="English">English</span></div>
                             </div>
                         </a>
                     </li>
                     <li class="ja pn-check-list check-position-l" style="pointer-events: auto;">
-                        <a href="#" onclick="chg_lang.updateLanguage('ja');">
+                        <a href="javascript:void(0)" onclick="chg_lang.updateLanguage('ja');">
                             <div class="pn-list">
                                 <div class="account-info text-hidden"><span class="user-name" data-i18n="Japanese">Japanese</span></div>
                             </div>
