--- a/src/html/main.html
+++ b/src/html/main.html
@@ -19,19 +19,19 @@
                         <a href="profile.html">プロフィール編集</a>
                     </li>
                     <li class="menu-list">
-                        <a href="#">パスワード変更</a>
+                        <a href="javascript:void(0)">パスワード変更</a>
                     </li>
                     <li class="menu-list">
-                        <a href="account.html">アカウント</a>
+                        <a href="javascript:void(0)">アカウント</a>
                     </li>
                     <li class="menu-list">
-                        <a href="#">アプリ管理</a>
+                        <a href="javascript:void(0)">アプリ管理</a>
                     </li>
                     <li class="menu-list">
-                        <a href="#">言語</a>
+                        <a href="javascript:void(0)">言語</a>
                     </li>
                     <li id="logout" class="menu-list">
-                        <a href="#">ログアウト</a>
+                        <a href="javascript:void(0)">ログアウト</a>
                     </li>
                 </ul>
             </div>
