--- a/src/html/search_cell.html
+++ b/src/html/search_cell.html
@@ -55,7 +55,7 @@
         </div>
     </main>
     <footer class="account-info-footer">
-        <a href="#" onclick="search_cell.addExternalCell();">
+        <a href="javascript:void(0)" onclick="search_cell.addExternalCell();">
             <div class="edit-list">
                 <span class="add-member" data-i18n="Add"></span>
             </div>
