--- a/src/html/select_accounttype.html
+++ b/src/html/select_accounttype.html
@@ -18,7 +18,7 @@
             <div id="roles">
                 <ul class="hover-action">
                     <li>
-                        <a href="#" onclick="sel_accType.dispPasswordAccount();">
+                        <a href="javascript:void(0)" onclick="sel_accType.dispPasswordAccount();">
                             <div class="pn-list">
                                 <div class="account-info">
                                     <span class="user-name" data-i18n="authType.basic"></span>
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" onclick="sel_accType.dispGoogleAccount();">
+                        <a href="javascript:void(0)" onclick="sel_accType.dispGoogleAccount();">
                             <div class="pn-list">
                                 <div class="account-info">
                                     <span class="user-name" data-i18n="authType.google">Google</span>
